Shopme is the web portal for sporty shoes.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 	<form action="">
 
 		<div align=center>
-			<h4>Login to Sportyshoes</h4>
+			<h4>Login to Shopme</h4>
 			<br>
 			<br>
 			<br>
